# AtomGCS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
resources/shaders/: box_face.frag  box_face.vert  overlay.frag  overlay.vert  point_cloud.frag  point_cloud.vert
shared/protocol/: protocol.h  protocol_utils.h
src/: main.cpp  mock_main.cpp
src/config/: AppConfig.cpp  AppConfig.h
src/core/: Application.cpp  Application.h  PathUtils.cpp  PathUtils.h
src/fonts/: Font-Awesome-7-Free-Solid-900.h  IconsMaterialSymbols.h  Roboto-Bold.h  Roboto-Regular.h
src/graphics/: GlLoader.cpp  GlLoader.h
src/mock/: MockServer.cpp  MockServer.h
src/network/: ProtocolClient.cpp  ProtocolClient.h  TcpClient.cpp  TcpClient.h  UdpReceiver.cpp  UdpReceiver.h
src/rendering/: ImGuiOpenGlBackend.cpp  RenderingSystem.cpp  RenderingSystem.h
src/state/: SharedState.cpp  SharedState.h
src/ui/: UISystem.cpp  UISystem.h  UiHelpers.cpp  UiHelpers.h
src/ui/panels/: CommandsPanel.cpp  ConnectionPanel.cpp  LogPanel.cpp  MissionPanel.cpp  PointCloudPanel.cpp  SimulationPanel.cpp  TelemetryPanel.cpp
src/utils/: Logger.cpp  Logger.h
src/viewer/: CubeGizmo.cpp  CubeGizmo.h  OrbitCamera.cpp  OrbitCamera.h  OverlayRenderer.cpp  OverlayRenderer.h  PointCloudRenderer.cpp  PointCloudRenderer.h  SceneOverlay.h
tests/: MockServerIntegrationTests.cpp  SmokeTests.cpp
